--- a/src/pages/odyssey.astro
+++ b/src/pages/odyssey.astro
@@ -357,6 +357,7 @@ import OdysseyLayout from '../layouts/OdysseyLayout.astro';
     height: 100%;
     padding: 0;
     position: relative;
+    min-width: 8000px;
   }
 
   .odysseus-character {
