--- a/src/layouts/OdysseyLayout.astro
+++ b/src/layouts/OdysseyLayout.astro
@@ -31,6 +31,10 @@
 			#1a1c2c 3px,
 			#181425 4px
 		);
+		user-select: none;
+		-webkit-user-select: none;
+		-moz-user-select: none;
+		-ms-user-select: none;
 	}
 	a {
 		color: #00e756;
