--- a/src/components/encounters/Laestrygonians.astro
+++ b/src/components/encounters/Laestrygonians.astro
@@ -13,12 +13,7 @@
     <p>Giant cannibals destroy all but one of Odysseus' ships. Only his own ship escapes the harbor.</p>
   </div>
   <div class="location-marker">
-    <svg width="24" height="24" viewBox="0 0 24 24" fill="none">
-      <rect x="4" y="4" width="16" height="16" fill="#ff004d"/>
-      <rect x="6" y="6" width="12" height="12" fill="#181425"/>
-      <rect x="8" y="8" width="8" height="8" fill="#ff004d"/>
-      <rect x="10" y="10" width="4" height="4" fill="#181425"/>
-    </svg>
+    <img src="/me/laestrygonians.png" alt="Laestrygonians" width="256" height="256" />
   </div>
   <div class="encounter-animation" id="laestrygonians-animation">
     <!-- Laestrygonians-specific animations can go here -->
