--- a/src/components/encounters/Circe.astro
+++ b/src/components/encounters/Circe.astro
@@ -13,12 +13,9 @@
     <p>Circe turns Odysseus' men into pigs. With Hermes' help, Odysseus resists her magic and frees his crew.</p>
   </div>
   <div class="location-marker">
-    <svg width="24" height="24" viewBox="0 0 24 24" fill="none">
-      <circle cx="12" cy="12" r="10" fill="#29adff"/>
-      <circle cx="12" cy="10" r="2" fill="#181425"/>
-      <rect x="10" y="14" width="4" height="2" fill="#181425"/>
-      <rect x="8" y="16" width="8" height="2" fill="#29adff"/>
-    </svg>
+    <div class="location-marker">
+      <img src="/me/circe.png" alt="Circe" width="128" height="128" />
+    </div>
   </div>
   <div class="encounter-animation" id="circe-animation">
     <!-- Circe-specific animations can go here -->
