Adding curse of the swine

--- a/src/components/encounters/Circe.astro
+++ b/src/components/encounters/Circe.astro
@@ -18,6 +18,16 @@
     </div>
   </div>
   <div class="encounter-animation" id="circe-animation">
-    <!-- Circe-specific animations can go here -->
+    <!-- Men to pigs transformation animation -->
+    <div class="circe-scene">
+      <div class="man-figure"></div>
+      <div class="man-figure"></div>
+      <div class="man-figure"></div>
+      <div class="man-figure"></div>
+      <div class="pig-figure"></div>
+      <div class="pig-figure"></div>
+      <div class="pig-figure"></div>
+      <div class="pig-figure"></div>
+    </div>
   </div>
 </div> 
