--- a/src/pages/odyssey.astro
+++ b/src/pages/odyssey.astro
@@ -7,6 +7,7 @@ import Aeolus from '../components/encounters/Aeolus.astro';
 import Laestrygonians from '../components/encounters/Laestrygonians.astro';
 import Circe from '../components/encounters/Circe.astro';
 import Underworld from '../components/encounters/Underworld.astro';
+import UnderworldOverlay from '../components/encounters/UnderworldOverlay.astro';
 import Sirens from '../components/encounters/Sirens.astro';
 import ScyllaCharybdis from '../components/encounters/ScyllaCharybdis.astro';
 import CattleOfTheSun from '../components/encounters/CattleOfTheSun.astro';
@@ -16,6 +17,9 @@ import Ithaca from '../components/encounters/Ithaca.astro';
 
 <OdysseyLayout>
   <div class="odyssey-container">
+    <!-- Underworld Overlay -->
+    <UnderworldOverlay />
+    
     <!-- Fixed Title -->
     <div class="page-title">
       <h1>The Odyssey</h1>
